--- a/equipamentos-apirest/equipamentos-apirest/src/main/resources/application.properties
+++ b/equipamentos-apirest/equipamentos-apirest/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.url= jdbc:postgresql://localhost:5432/equipamentos
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
+server.port = 8090
