--- a/Front/package.json
+++ b/Front/package.json
@@ -16,5 +16,10 @@
     "prestart": "npm install",
     "start": "http-server -a 127.0.0.1 -p 9000",
     "update-index-async": "node -e \"var fs=require('fs'),indexFile='app/index-async.html',loaderFile='app/bower_components/angular-loader/angular-loader.min.js',loaderText=fs.readFileSync(loaderFile,'utf-8').split(/sourceMappingURL=angular-loader.min.js.map/).join('sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map'),indexText=fs.readFileSync(indexFile,'utf-8').split(/\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/).join('//@@NG_LOADER_START@@\\n'+loaderText+'    //@@NG_LOADER_END@@');fs.writeFileSync(indexFile,indexText);\""
+  },
+  "dependencies": {
+    "angular-datatables": "^0.6.2",
+    "angular-locale-pt-br": "^1.3.16",
+    "angular-ui-grid": "^4.8.3"
   }
 }
