--- a/Front/package.json
+++ b/Front/package.json
@@ -6,6 +6,7 @@
   "repository": "https://github.com/angular/angular-seed",
   "license": "MIT",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "bower": "^1.7.7",
     "http-server": "^0.9.0"
   },
