--- a/Front/package.json
+++ b/Front/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "angular-datatables": "^0.6.2",
     "angular-locale-pt-br": "^1.3.16",
-    "angular-ui-grid": "^4.8.3"
+    "angular-ui-grid": "^4.8.3",
+    "jspdf": "^1.5.3",
+    "jspdf-autotable": "^3.2.10"
   }
 }
